--- a/chat/pom.xml
+++ b/chat/pom.xml
@@ -9,11 +9,11 @@
 	<name>Chat Parent</name>
 
 	<properties>
-		<gdx.version>0.9.9-SNAPSHOT</gdx.version>
+		<gdx.version>0.9.9</gdx.version>
 		<android.version>4.1.1.4</android.version>
 		<android.maven.version>3.6.0</android.maven.version>
-		<gwt.version>2.5.0</gwt.version>
-		<gwt.maven.version>2.5.0</gwt.maven.version>
+		<gwt.version>2.5.1</gwt.version>
+		<gwt.maven.version>2.5.1</gwt.maven.version>
 	</properties>
 
 	<repositories>
@@ -54,12 +54,6 @@
 			<id>html</id>
 			<modules>
 				<module>html</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>ios</id>
-			<modules>
-				<module>ios</module>
 			</modules>
 		</profile>
 	</profiles>
