--- a/chat/android/AndroidManifest.xml
+++ b/chat/android/AndroidManifest.xml
@@ -4,7 +4,11 @@
 					android:screenOrientation="landscape"
 					android:versionCode="1"
 					android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="6" android:targetSdkVersion="11" />
+	<uses-sdk android:minSdkVersion="9" android:targetSdkVersion="18" />
+	
+	<uses-permission android:name="android.permission.INTERNET" />
+	
+	
 	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
 		<activity android:name="ChatActivity"
 							android:label="@string/app_name"
