--- a/chat/android/AndroidManifest.xml
+++ b/chat/android/AndroidManifest.xml
@@ -13,7 +13,8 @@
 		<activity android:name="ChatActivity"
 							android:label="@string/app_name"
 							android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-							android:configChanges="keyboard|keyboardHidden|orientation">
+							android:configChanges="keyboard|keyboardHidden|orientation"
+							android:screenOrientation="landscape">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
