Updated android-maven-plugin version and moved native libs to the location maven wants them to be.

--- a/chat/android/pom.xml
+++ b/chat/android/pom.xml
@@ -67,7 +67,7 @@
 				<artifactId>maven-nativedependencies-plugin</artifactId>
 				<version>0.0.7</version>
 				<configuration>
-					<nativesTargetDir>libs</nativesTargetDir>
+					<nativesTargetDir>src/main/libs</nativesTargetDir>
 					<separateDirs>true</separateDirs>
 				</configuration>
 				<executions>
