--- a/chat/pom.xml
+++ b/chat/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<gdx.version>0.9.9</gdx.version>
 		<android.version>4.1.1.4</android.version>
-		<android.maven.version>3.6.0</android.maven.version>
+		<android.maven.version>4.0.0-rc.2</android.maven.version>
 		<gwt.version>2.5.1</gwt.version>
 		<gwt.maven.version>2.5.1</gwt.maven.version>
 	</properties>
